--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "algoliasearch": "^4.5.1",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-instantsearch-dom": "^6.7.0",
     "react-loading-skeleton": "^2.1.1",
     "react-owl-carousel2": "^0.3.0",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "react-search": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
