--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
-    "react-search": "^2.1.1"
+    "react-search": "^2.1.1",
+    "react-speech-recognition": "^3.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
